--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,24 +1,19 @@
 <header>
   <div class="page-title">
-    <h1>{{ .name }}</h1>
-    <div class="address">{{ .address }}</div>
+    <h1>{{ .profile.name }}</h1>
   </div>
   <div>
-    {{ with .email }}
-      <a href="mailto:{{ . }}">{{ . }}</a>
+    {{ with .profile.email }}
+    <a href="mailto:{{ . }}">{{ . }}</a>
     {{ end }}
-    {{ with .phone }}
-      <a href="tel:{{ . }}"
-        >({{ substr . 0 3 }}) {{ substr . 3 3 }}-{{ substr . 6 4 }}</a
-      >
+    {{ with .contact.phone }}
+    <a href="tel:{{ . }}">{{ . }}</a>
     {{ end }}
-    {{ with .website }}
+    {{ with .contact.location }}
+    <a href="#">{{ . }}</a>
+    {{ end }}
+    {{ with .profile.website }}
       <a href="https://{{ . }}">{{ . }}</a>
-    {{ end }}
-    {{ with .github }}
-      <a href="https://github.com/{{ . }}"
-        ><i class="fab fa-github"></i> {{ . }}</a
-      >
     {{ end }}
   </div>
 </header>
