--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,29 +1,19 @@
 {{ define "main" }}
+  {{ $defaultOrder := slice "experience" "older_experience" "skills" "education" "publications" "interests" }}
   <main>
     {{ with .Site.Params }}
+      {{ $order := .resumeOrder }}
+      {{ if eq $order nil }}
+      {{ $order = $defaultOrder }}
+      {{ end }}
       <div class="box">
         <div class="wrap">
           {{ partial "header.html" . }}
-          <h2>Experience</h2>
-          <hr />
-          {{ range .experience.list }} {{ partial "experience.html" . }} {{ end }}
-          <h2>Older Experience</h2>
-          <hr />
-          {{ range .otherExperience.list }} {{ partial "older_experience.html" . }} {{ end }}
-          <h2>Education</h2>
-          <hr />
-          {{ range .education.list }} {{ partial "education.html" . }} {{ end }}
-          <h2>Skills</h2>
-          <hr />
-          {{ range .skills.list }} {{ partial "skills.html" . }} {{ end }}
-          {{ if .courses }}
-          <h2>Publications</h2>
-          <hr />
-          {{ partial "courses.html" .courses.list }}
+          {{ $ctx := . }}
+          {{ debug.Dump (printf "default: %+v, current: %+v, provided: %+v" $defaultOrder $order .resumeOrder) }}
+          {{ range $order }}
+          {{ partial (printf "%s.html" .) $ctx }}
           {{ end }}
-          <h2>Interests</h2>
-          <hr />
-          {{ partial "interests.html" .interests.list }}
         </div>
       </div>
     {{ end }}
