--- a/layouts/partials/education.html
+++ b/layouts/partials/education.html
@@ -1,5 +1,7 @@
+<h2>Education</h2>
+<hr />
 <section>
-  {{ with . }}
+  {{ range .education.list }}
     <div>
       {{ with . }}
         <div class="heading-line">
