--- a/layouts/partials/experience.html
+++ b/layouts/partials/experience.html
@@ -1,5 +1,7 @@
+<h2>Experience</h2>
+<hr />
 <section>
-  {{ with . }}
+  {{ range .experience.list }}
     <div>
       <div class="heading-line">
         <h3>{{ .company }} - {{ .title }}</h3>
